# swippter

./: CONTRIBUTING.md  LICENSE  README.md
.github/: python-app.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirement.txt
backend/docs/: swippter-architecture.excalidraw
backend/swippter/: .dockerignore  .env.example  manage.py  requirements.txt
backend/swippter/app/: admin.py  config.py
backend/swippter/app/core/: celery_tasks.py  errors.py  exception_handler.py  exceptions.py  logging.py  middlewares.py  throttlers.py  tokens.py
backend/swippter/app/core/backend/: custom_authentication.py
backend/swippter/app/dao/: base_dao.py  user_dao.py
backend/swippter/app/dao/patterns/: dao_factory.py
backend/swippter/app/exceptions/: method_not_allowed_exception.py  unauthenticated_exception.py
backend/swippter/app/models/: BaseDAO.py  base.py  base_dao.py  user.py  user_model.py
backend/swippter/app/pattern/: abstract_factory.py  factory.py  singleton.py
backend/swippter/app/routes/: authentication_routes.py  index_routes.py
backend/swippter/app/serializers/: auth_serializers.py
backend/swippter/app/services/: authentication_service.py  base_service.py  index_service.py
backend/swippter/app/utilities/: utilities.py
backend/swippter/app/utils/: utilities.py
backend/swippter/app/validators/: authentication_validator.py  base_validator.py  index_validator.py
backend/swippter/app/views/: authentication_views.py  base_api_view.py  index_views.py
backend/swippter/swippter/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+90 files in other folders)
